--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,7 +37,7 @@ jobs:
         mkdir ~/.ssh
         touch ~/.ssh/{known_hosts,id_ed25519}
         chmod 600 ~/.ssh/*
-        printf -- "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
+        printf -- "${{ secrets.SSH_KEY }}" | base64 -d > ~/.ssh/id_ed25519
         ssh-keyscan -H $DEPLOY_HOST > ~/.ssh/known_hosts
       env:
         SSH_KEY:
