--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=SwiftRPG
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://rpg.swiftirc.dev
 BOT_TOKEN=api_token_to_be_used
 
 LOG_CHANNEL=stack
