--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=swiftrpg_web
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=rpg
+DB_USERNAME=rpg
+DB_PASSWORD=rpgpassword9202
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
