fix: Build npm dependencies in GH Action

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Build JS and CSS
+      run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
