--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://rpg.swiftirc.dev
+APP_TIMEZONE=UTC
+
 BOT_TOKEN=api_token_to_be_used
 
 LOG_CHANNEL=stack
