--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
-        "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.2.4",
-        "lodash": "^4.17.19",
+        "phaser": "^3.60.0-beta.14",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.18",
         "vite": "^2.9.13"
