--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
+        "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.2.4",
         "phaser": "^3.60.0-beta.14",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.0.18",
+        "tailwindcss": "^3.3.1",
         "vite": "^2.9.13"
     }
 }
