--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "rm -rf public/build && vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.4.0",
